# TelegramBot-Boilerplate

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
TelegramBot/: __init__.py  __main__.py  config.py  logging.py  version.py
TelegramBot/database/: MongoDb.py  MysqlDb.py  database.py
TelegramBot/helpers/: decorators.py  filters.py  functions.py  pasting_services.py  ratelimiter.py  start_constants.py
TelegramBot/helpers/assets/: zuihou.mov
TelegramBot/plugins/developer/: broadcast.py  terminal.py  updater.py
TelegramBot/plugins/sudo/: catalogs.py  dbstats.py  game_admin.py  guarantees.py  inpect.py  log.py  serverstats.py  speedtest.py
TelegramBot/plugins/users/: game.py  group.py  paste.py  ping.py  shangfen.py  start.py  userGroupCommand.py
TelegramBot/tasks/: game.py  message.py
