[tool.poetry]
name = "telegrambot-boilerplate"
version = "0.1.0"
description = ""
authors = ["bnb89 <vbdd@msn.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyrofork = "^2.3.21.post3"
tgcrypto-pyrofork = "^1.2.6"
python-dotenv = "^1.0.1"
speedtest-cli = "^2.1.3"
telegraph = {extras = ["aio"], version = "^2.2.0"}
pyrate-limiter = "^3.6.1"
cachetools = "^5.3.3"
aiofiles = "^23.2.1"
psutil = "^5.9.8"
httpx = "^0.27.0"
motor = "^3.4.0"
uvloop = "^0.19.0"
pillow = "^10.3.0"
beautifulsoup4 = "^4.12.3"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.3"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
